when enabling `allowPublicLibraryEdits`, the button `Update variant using current room state` now updates the JSON file in the library directory

--- a/config.template.json
+++ b/config.template.json
@@ -5,6 +5,8 @@
   "minifyJavascript": false,
   "forceTracing": false,
 
+  "allowPublicLibraryEdits": false,
+
   "directories": {
     "library": "library",
     "save": "save",
