yet another game pieces PR (#1236)
* remove widget stylesheet when removing widget (#1091)

* add full line comments (#1089)

* add full line comments

* Now full-line comments are reproduced in logging output.

* fix logging comments without leading space

* Hopefully fixed proper comment display and error detection in all cases.

* Remove ` *` at start of comment regex.

* escape HTML in comments

Co-authored-by: rogerl50 <63379656+rogerl50@users.noreply.github.com>

* fixed `inheritFrom` with default values (#1093)

* Bump crc-32 from 1.2.0 to 1.2.1 (#1085)

* improved update behavior of cards (#922)

* PCIO importer improvements (#1063)

* Add Lost Temples, Tutti Frutti, Solitaire (#1078)

Public library:

Lost Temples. New game similar to Karuba. By LawDawg.
Solitaire. New collection of solitaire card games. Includes FreeCell (by ArnoldSmith86) which is being replaced by this collection. Other games in collection by LawDawg.
Tutti Frutti. New game similar to Sushi Go! By LawDawg.
Whisky Cat. Minor updates.

* remove Solitaire.vtt (#1095)

* Bump jest-environment-jsdom from 27.4.6 to 27.5.0 (#1102)

* Bump jest from 27.4.7 to 27.5.0 (#1103)

* fixed crash with invalid widgets (#1099)

* set player color for TestCafe tests (#1106)

* set player color for TestCafe tests

* test seat in create game

* update all dependecies (#1110)

* Bump express from 4.17.2 to 4.17.3 (#1118)

* Bump testcafe from 1.18.3 to 1.18.4 (#1119)

* Bump json-diff from 0.7.1 to 0.7.2 (#1131)

* Bump json-diff from 0.7.2 to 0.7.3 (#1132)

* group custom and routine properties in JSON editor (#1120)

* change JSON editor command for `SELECT`.`sortBy` (#1128)

* add a few examples to the JSON editor macro feature (#1126)

* Improve testcafe-gitpod (#1115)

* pass arguments in testcafe-gitpod
* vnc install files
* ignore vnc port 5900

* Default values in INPUT select field (#1124)

* prevent redirecting to an existing r

--- a/config.template.json
+++ b/config.template.json
@@ -1,7 +1,9 @@
 {
   "port": 8272,
   "externalURL": "http://localhost:8272",
+  "urlPrefix": "",
   "minifyJavascript": false,
+  "forceTracing": false,
 
   "directories": {
     "library": "library",
