--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@node-minify/html-minifier": "^6.2.0",
     "@node-minify/no-compress": "^6.2.0",
     "@node-minify/uglify-es": "^6.2.0",
+    "bson": "^4.6.4",
     "crc-32": "^1.2.2",
     "express": "^4.17.3",
     "jszip": "^3.9.1",
