--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@node-minify/no-compress": "^6.2.0",
     "@node-minify/uglify-es": "^6.2.0",
     "crc-32": "^1.2.2",
+    "dompurify": "^2.3.8",
     "express": "^4.17.3",
     "jszip": "^3.9.1",
     "node-fetch": "^2.6.1",
