--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "testcafe-firefox-all": "testcafe firefox tests/testcafe",
     "testcafe-firefox-headless": "testcafe firefox:headless",
     "testcafe-firefox-headless-all": "testcafe firefox:headless tests/testcafe",
-    "testcafe-gitpod": "bash tests/testcafe/gitpod.sh && npm run testcafe-firefox-headless",
-    "testcafe-gitpod-all": "bash tests/testcafe/gitpod.sh && npm run testcafe-firefox-headless-all --"
+    "testcafe-gitpod": "bash tests/testcafe/gitpod.sh",
+    "testcafe-gitpod-all": "bash tests/testcafe/gitpod.sh tests/testcafe"
   },
   "repository": {
     "type": "git",
