Customize server name

--- a/config.template.json
+++ b/config.template.json
@@ -4,6 +4,7 @@
   "urlPrefix": "",
   "minifyJavascript": false,
   "forceTracing": false,
+  "customTab": null,
 
   "allowPublicLibraryEdits": false,
 
