--- a/.devcontainer/codespaces-vnc/devcontainer.json
+++ b/.devcontainer/codespaces-vnc/devcontainer.json
@@ -1,5 +1,11 @@
 {
-    "name": "virtualtabletop-dev",
+    "name": "virtualtabletop-vnc",
+    "onCreateCommand": {
+        "setup node": ". nvm; nvm install 16; nvm use 16",
+        "setup testcafe": ".devcontainer/testcafe-setup/install.sh"
+    },
+    "updateContentCommand": "npm install",
+    "postStartCommand": "npm run debug",
     "forwardPorts": [8272,9229,6080,5900],
     "portsAttributes": {
         "8272": {
@@ -21,7 +27,5 @@
     },
     "otherPortsAttributes": {
         "onAutoForward": "ignore"
-    },
-    "updateContentCommand": "npm install",
-    "postStartCommand": "npm run debug"
+    }
 }
