--- a/.devcontainer/gitpod-vnc/devcontainer.json
+++ b/.devcontainer/gitpod-vnc/devcontainer.json
@@ -1,5 +1,9 @@
 {
-    "name": "virtualtabletop-dev",
+    "name": "virtualtabletop-gitpod",
+    "image": "gitpod/workspace-full-vnc",
+    "onCreateCommand": ". nvm; nvm install 16; nvm use 16",
+    "updateContentCommand": "npm install",
+    "postStartCommand": "npm run debug",
     "forwardPorts": [8272,9229,6080,5900],
     "portsAttributes": {
         "8272": {
@@ -21,7 +25,5 @@
     },
     "otherPortsAttributes": {
         "onAutoForward": "ignore"
-    },
-    "updateContentCommand": "npm install",
-    "postStartCommand": "npm run debug"
+    }
 }
