remove default devcontainer.json

--- a/.devcontainer/basic/devcontainer.json
+++ b/.devcontainer/basic/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "virtualtabletop-dev",
-    "onCreateCommand": ". nvm; nvm install 16; nvm use 16",
+    "onCreateCommand": ". ${NVM_DIR}/nvm.sh; nvm install 16; nvm use 16",
     "updateContentCommand": "npm install",
     "postStartCommand": "npm run debug",
     "forwardPorts": [8272,9229,6080,5900],
