--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,20 +1,16 @@
-image: gitpod/workspace-full-vnc
 tasks:
   - init: nvm install 16; nvm use 16; npm install
     command: (sleep 2; gp preview $(gp url 8272)/test) & npm run debug
 ports:
   - port: 8272
-    name: virtualtabletop
     visibility: public
     onOpen: ignore
-  - port: 6080
-    name: noVNC
-    visibility: private
   - port: 9229
-    name: Node.JS Debugger
+    visibility: private
+    onOpen: ignore
+  - port: 9239
     visibility: private
     onOpen: ignore
   - port: 5900
-    name: vnc
     visibility: private
     onOpen: ignore
