scope and start_url relative to manifest

--- a/assets/branding/manifest.json
+++ b/assets/branding/manifest.json
@@ -2,8 +2,8 @@
   "name": "VirtualTabletop.io",
   "short_name": "VTT",
   "description": "Play board games with friends. No ads, no accounts.",
-  "start_url": ".",
-  "scope": ".",
+  "start_url": "../..",
+  "scope": "../..",
   "display": "standalone",
   "orientation": "landscape",
   "background_color": "#484848",
