use the same testcafe version in GitHub workflow

--- a/.github/workflows/testcafe-chrome.yml
+++ b/.github/workflows/testcafe-chrome.yml
@@ -30,4 +30,5 @@ jobs:
     - name: Run TestCafe tests
       uses: DevExpress/testcafe-action@latest
       with:
+        version: "3.5.0"
         args: "chrome:headless tests/testcafe"
