Adjust timeout for TestCafe for Chrome

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "test-debug": "node --experimental-vm-modules --inspect-brk=9239 node_modules/.bin/jest",
     "test-cont": "nodemon -e js,mjs,css,html --ignore save/ --ignore coverage/ --experimental-vm-modules node_modules/.bin/jest",
-    "testcafe": "testcafe chrome",
-    "testcafe-all": "testcafe chrome tests/testcafe",
-    "testcafe-headless": "testcafe chrome:headless",
-    "testcafe-headless-all": "testcafe chrome:headless tests/testcafe",
+    "testcafe": "testcafe chrome --selector-timeout 20000 --assertion-timeout 20000 --page-load-timeout 20000",
+    "testcafe-all": "testcafe chrome tests/testcafe --selector-timeout 20000 --assertion-timeout 20000 --page-load-timeout 20000",
+    "testcafe-headless": "testcafe chrome:headless --selector-timeout 20000 --assertion-timeout 20000 --page-load-timeout 20000",
+    "testcafe-headless-all": "testcafe chrome:headless tests/testcafe --selector-timeout 20000 --assertion-timeout 20000 --page-load-timeout 20000",
     "testcafe-chromium": "testcafe chromium",
     "testcafe-chromium-all": "testcafe chromium tests/testcafe",
     "testcafe-chromium-headless": "testcafe chromium:headless",
