Revert "Disable dev shm for Chrome TestCafe"
This reverts commit 09bfaf54ea0ba52ceb44a8842c5cffe683c31242.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "test-debug": "node --experimental-vm-modules --inspect-brk=9239 node_modules/.bin/jest",
     "test-cont": "nodemon -e js,mjs,css,html --ignore save/ --ignore coverage/ --experimental-vm-modules node_modules/.bin/jest",
-    "testcafe": "testcafe \"chrome --disable-dev-shm-usage\"",
-    "testcafe-all": "testcafe \"chrome --disable-dev-shm-usage\" tests/testcafe",
-    "testcafe-headless": "testcafe \"chrome:headless --disable-dev-shm-usage\"",
-    "testcafe-headless-all": "testcafe \"chrome:headless --disable-dev-shm-usage\" tests/testcafe",
+    "testcafe": "testcafe chrome",
+    "testcafe-all": "testcafe chrome tests/testcafe",
+    "testcafe-headless": "testcafe chrome:headless",
+    "testcafe-headless-all": "testcafe chrome:headless tests/testcafe",
     "testcafe-chromium": "testcafe chromium",
     "testcafe-chromium-all": "testcafe chromium tests/testcafe",
     "testcafe-chromium-headless": "testcafe chromium:headless",
