--- a/.github/workflows/testcafe-chrome.yml
+++ b/.github/workflows/testcafe-chrome.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Run TestCafe tests
       uses: DevExpress/testcafe-action@latest
       with:
-        version: "3.7.0-rc.1"
+        version: "3.7.0"
         args: "chrome:headless tests/testcafe"
