added config option `simulateServerLag`

--- a/config.template.json
+++ b/config.template.json
@@ -5,6 +5,7 @@
   "urlPrefix": "",
   "minifyJavascript": false,
   "forceTracing": false,
+  "simulateServerLag": 0,
   "customTab": null,
 
   "allowPublicLibraryEdits": false,
