--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -13,35 +13,22 @@ jobs:
         with:
           fetch-depth: 0
       
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y libarchive-zip-perl
+
       - name: Check asset file names
         run: |
-          python3 - <<'EOF'
-          import os, sys, zlib, subprocess
-          found_error = False
-          base = os.environ.get('GITHUB_EVENT_PULL_REQUEST_BASE_SHA')
-          head = os.environ.get('GITHUB_SHA')
-          diff_cmd = f"git diff --name-only {base} {head}"
-          changed = subprocess.check_output(diff_cmd, shell=True).decode().splitlines()
-          assets = [f for f in changed if '/assets/' in f]
-          for file in assets:
-              try:
-                  with open(file, 'rb') as fh:
-                      data = fh.read()
-                  crc = zlib.crc32(data)
-                  if crc > 0x7fffffff:
-                      crc -= 0x100000000
-                  size = os.path.getsize(file)
-                  expected = f'{crc}_{size}'
-                  actual = os.path.basename(file)
-                  if actual == expected:
-                      print(f'✅ {file}')
-                  else:
-                      print(f'❌ {file}')
-                      found_error = True
-              except Exception as e:
-                  print(f'❌ {file} (error: {e})')
-                  found_error = True
-          if found_error:
-              print('Found files with inconsistent naming patterns')
-              sys.exit(1)
-          EOF 
+          found_error=false
+          for file in $(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep 'library/.*/assets/'); do
+            expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
+            if [[ "$(basename "$file")" != "$expected" ]]; then
+              echo "❌ $file (expected: $expected)"
+              found_error=true
+            else
+              echo "✅ $file"
+            fi
+          done
+          if [ "$found_error" = true ]; then
+            echo "Found files with inconsistent naming patterns"
+            exit 1
+          fi 
