--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -22,17 +22,15 @@ jobs:
           for file in $(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep 'library/.*/assets/'); do
             expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
             if [[ "$(basename "$file")" != "$expected" ]]; then
-              echo "❌ $file (expected: $expected)"
               # Try converting to DOS line endings
               sed -i 's/$/\r/' "$file"
-              expected_dos=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
-              if [[ "$expected_dos" == "$expected" ]]; then
-                echo "✅ Fixed $file with DOS line endings"
-                mv "$file" "$(dirname "$file")/$expected"
-                git add "$(dirname "$file")/$expected"
-                git rm "$file"
+              expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
+              if [[ "$(basename "$file")" != "$expected" ]]; then
+                echo "✅ $file (auto-fixed)"
                 fixed_any=true
               else
+                echo "❌ $file (expected: $expected)"
+                git checkout -- "$file"
                 found_error=true
               fi
             else
