run language check even if asset name check fails

--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -48,6 +48,7 @@ jobs:
           fi
 
       - name: Check changed JSON languages are known
+        if: always()
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
