--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -26,7 +26,10 @@ jobs:
                 echo "✅ $file"
               else
                 # Try converting to DOS line endings
-                sed -i 's/$/\r/' "$file"
+                sed -i 's/$/\r/' "$file"                             # Add DOS line endings
+                if [ "$(tail -c1 "$file" | xxd -p)" = "0d" ]; then   # Remove trailing \r newline that sed added if no \n was present
+                  truncate -s -1 "$file"
+                fi
                 expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
                 if [[ "$(basename "$file")" == "$expected" ]]; then
                   echo "✅ $file (auto-fixed)"
