--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -19,25 +19,30 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           found_error=false
           fixed_any=false
-          for file in $(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep 'library/.*/assets/'); do
-            expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
-            if [[ "$(basename "$file")" == "$expected" ]]; then
-              echo "✅ $file"
-            else
-              # Try converting to DOS line endings
-              sed -i 's/$/\r/' "$file"
+          while IFS= read -r file; do
+            if [[ "$file" =~ library/.*/assets/ ]]; then
               expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
               if [[ "$(basename "$file")" == "$expected" ]]; then
-                echo "✅ $file (auto-fixed)"
-                git add "$file"
-                fixed_any=true
+                echo "✅ $file"
               else
-                echo "❌ $file (expected: $expected)"
-                git checkout "$file"
-                found_error=true
+                # Try converting to DOS line endings
+                sed -i 's/$/\r/' "$file"                             # Add DOS line endings
+                if [ "$(tail -c1 "$file" | xxd -p)" = "0d" ]; then   # Remove trailing \r newline that sed added if no \n was present
+                  truncate -s -1 "$file"
+                fi
+                expected=$(python3 -c "import sys,os,zlib; f=sys.argv[1]; d=open(f,'rb').read(); c=zlib.crc32(d); s=os.path.getsize(f); print(f'{c-0x100000000 if c>0x7fffffff else c}_{s}')" "$file")
+                if [[ "$(basename "$file")" == "$expected" ]]; then
+                  echo "✅ $file (auto-fixed)"
+                  git add "$file"
+                  fixed_any=true
+                else
+                  echo "❌ $file (expected: $expected)"
+                  git checkout "$file"
+                  found_error=true
+                fi
               fi
             fi
-          done
+          done < <(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           if [ "$fixed_any" = true ]; then
             git commit -m "fix: convert asset to DOS line endings"
             git push origin HEAD:${GITHUB_HEAD_REF}
