fixed crash for newer Node versions

--- a/package.json
+++ b/package.json
@@ -52,13 +52,15 @@
     "@node-minify/no-compress": "^9.0.1",
     "@node-minify/uglify-es": "^9.0.1",
     "bson": "^6.10.3",
-    "crawler-user-agents": "^1.2.0",
     "crc-32": "^1.2.2",
     "dompurify": "^3.2.5",
     "express": "^5.1.0",
     "jszip": "^3.10.1",
     "node-fetch": "^2.7.0",
     "ws": "^8.18.2"
+  },
+  "optionalDependencies": {
+    "crawler-user-agents": "^1.2.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
