feat: Add rate limiting to API and asset routes

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "express": "^5.1.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.3.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "express-rate-limit": "^7.1.5"
   },
   "optionalDependencies": {
     "crawler-user-agents": "^1.21.0"
