--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -64,7 +64,7 @@ jobs:
           found_issues=false
           
           while IFS= read -r file; do
-            if [[ "$file" =~ library/games/.*\.json$ ]] && [[ -f "$file" ]]; then
+            if [[ "$file" =~ library/(games|tutorials)/.*\.json$ ]] && [[ -f "$file" ]]; then
               echo "Validating $file..."
               if output=$(node validator/validate_gamefile_node.js "$file" 2>&1); then
                 echo "✅ $file - No issues found"
