--- a/config.template.json
+++ b/config.template.json
@@ -10,6 +10,7 @@
 
   "allowPublicLibraryEdits": false,
   "adminURL": null,
+  "authenticateUsers": false,
 
   "directories": {
     "library": "library",
