library check debugging

--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -58,17 +58,18 @@ jobs:
         id: square-images
         continue-on-error: true
         run: |
-          python3 -m pip install --quiet Pillow
+          set +e
+          python3 -m pip install Pillow
           found_non_square=false
           while IFS= read -r file; do
             if [[ "$file" =~ library/(games|tutorials)/.*\.json$ ]] && [[ -f "$file" ]]; then
-              image_path=$(python3 -c "import json, sys; data = json.load(open('$file')); print(data.get('_meta', {}).get('info', {}).get('image', ''))" 2>/dev/null)
+              image_path=$(python3 -c "import json, sys; data = json.load(open(sys.argv[1])); print(data.get('_meta', {}).get('info', {}).get('image', ''))" "$file")
               if [[ -n "$image_path" ]] && [[ "$image_path" =~ ^/assets/ ]]; then
                 asset_name=$(basename "$image_path")
                 game_dir=$(dirname "$file")
                 asset_file="$game_dir/assets/$asset_name"
                 if [[ -f "$asset_file" ]]; then
-                  dimensions=$(python3 -c "from PIL import Image; img = Image.open('$asset_file'); print(f'{img.width}x{img.height}')" 2>/dev/null)
+                  dimensions=$(python3 -c "from PIL import Image; img = Image.open(sys.argv[1]); print(f'{img.width}x{img.height}')" "$asset_file")
                   if [ $? -eq 0 ]; then
                     width=$(echo "$dimensions" | cut -d'x' -f1)
                     height=$(echo "$dimensions" | cut -d'x' -f2)
