--- a/.github/workflows/check-library.yml
+++ b/.github/workflows/check-library.yml
@@ -76,27 +76,9 @@ jobs:
                 if [[ -f "$asset_file" ]]; then
                   file_type=$(file -b "$asset_file")
                   if [[ "$file_type" == *SVG* ]]; then
-                    dimensions=$(python3 -c "
-import sys, re
-with open(sys.argv[1]) as f:
-  s = f.read()
-w = re.search(r'<svg[^>]*\swidth=[\"'\''']([0-9.]+)', s)
-h = re.search(r'<svg[^>]*\sheight=[\"'\''']([0-9.]+)', s)
-if w and h:
-  print(f\"{w.group(1)}x{h.group(1)}\")
-else:
-  vb = re.search(r'viewBox=\"([^\"]+)\"', s)
-  if vb:
-    parts = vb.group(1).split()
-    if len(parts) >= 4:
-      print(f\"{parts[2]}x{parts[3]}\")
-    else:
-      sys.exit(1)
-  else:
-    sys.exit(1)
-" "$asset_file")
+                    dimensions=$(python3 .github/scripts/check_svg_square.py "$asset_file")
                   else
-                  dimensions=$(python3 -c "import sys; from PIL import Image; img = Image.open(sys.argv[1]); print(f'{img.width}x{img.height}')" "$asset_file")
+                    dimensions=$(python3 -c "import sys; from PIL import Image; img = Image.open(sys.argv[1]); print(f'{img.width}x{img.height}')" "$asset_file")
                   fi
                   if [ $? -eq 0 ]; then
                     width=$(echo "$dimensions" | cut -d'x' -f1)
